Schema i swaggerdoc og håndtering av Accept application/xml header
